--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="stylesheet" type="text/css" href="css/css.css">
 	<meta charset="UTF-8">
-	<title>Profils</title>
+	<title>Projects</title>
 </head>
 <body>
 	<div  id="font"></div>
@@ -36,7 +36,7 @@
 			</div>
 			<div id="projectname">
 				<p><strong>Projet de gestion des compétences</strong></p>
-				<p><strong>Créateur du Projet</strong></p>
+				<p>Créateur du Projet</p>
 			</div>
 		</aside>
 		<aside id="projectmain">
@@ -48,7 +48,17 @@
 					<div class="projectline">
 					</div>
 					<div class="projectcontain">
-						<p>Le projet consiste à mettre en place une application de gestion des compétences au sein de l'IMIE.</p>
+						<p>Le projet consiste à mettre en place une application de gestion des compétences au sein de l'IMIE.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 					</div>
 				</div>
 			</div>
@@ -60,7 +70,7 @@
 					<div class="projectline">
 					</div>
 					<div class="projectcontain">
-						<p>#Gestion Projet, #HTML, #CSS, #Design, #PHP, #Bonne Humeur, #Brioche</p>
+						<p>#Gestion Projet  X X X X, #HTML X X X, #CSS X X X <br /> #Design, #PHP, #Bonne Humeur, #Brioche</p>
 					</div>
 				</div>
 			</div>
