--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
 		</div>
 		<div id="search">
 			<form>
-				<input type="text" placeholder="Rechercher...">
+				<input id="searchBar" type="text" placeholder="Rechercher...">
 				<input id ="searchbutton" type="submit" value="OK">
 			</form>
 		</div>
