--- a/project.html
+++ b/project.html
@@ -9,7 +9,7 @@
 	<div  id="font"></div>
 	<header>
 		<div id="headerlogo">
-			<img alt="headerlogo" src="img/headerlogo.jpg">
+			<!--<img alt="headerlogo" src="img/headerlogo.jpg">-->
 		</div>
 		<div id="menu">
 			<ul>
@@ -104,9 +104,10 @@
 				</div>
 			</div>
 		</aside>
-		<footer>
-			<p>DL11 - Groupe 3 - 2015 - Copyrights (c)</p>
-		</footer>
+        <footer>
+            <p>DL11 - Groupe 3 - 2015 - Copyrights (c)</p>
+        </footer>
 	</main>
+
 </body>
 </html>
