jonathan page projet
css

--- a/project.html
+++ b/project.html
@@ -28,8 +28,8 @@
 			<img alt="profile" src="img/owl.jpg">
 		</div>
 	</header>
+
 	<main>
-	
 		<aside id="projectheader">
 			<div id="projectpicture">
 				<img src="img/chaton.jpg" alt="projectpicture">
@@ -40,13 +40,13 @@
 			</div>
 		</aside>
 		<aside id="projectmain">
-			<div>
+			<div id="description">
 				<div class="projectdescription">
 					<div class="projectmenu">
 						<h2>Description</h2>
 					</div>
-					<div class="projectline">
-					</div>
+                    <!--<div class="projectline">
+                    </div>-->
 					<div class="projectcontain">
 						<p>Le projet consiste à mettre en place une application de gestion des compétences au sein de l'IMIE.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -67,47 +67,47 @@
 					<div class="projectmenu">
 						<h2>Mots clés</h2>
 					</div>
-					<div class="projectline">
-					</div>
-					<div class="projectcontain">
-						<p>#Gestion Projet  X X X X, #HTML X X X, #CSS X X X <br /> #Design, #PHP, #Bonne Humeur, #Brioche</p>
-					</div>
-				</div>
-			</div>
-			<div>
-				<div class="projectgroups">
-					<div class="projectmenu">
-						<h2>Groupes de travail</h2>
-					</div>
-					<div class="projectline">
-					</div>
-					<div class="projectcontain">
-						<div id="projectworkgroups">
-							<h3>Groupe1</h3>
-							<div class="projectworkgroupsmembers">
-								
-							<h4>1.Modelisation</h4>
-							<ul>
-								<li>Jonathan</li>
-								<li>Gaëlle</li>
-							</ul>
-							</div>
-							<div class="projectworkgroupsmembers">
-							<h4>2.Développemment</h4>
-							<ul>
-								<li>Jocelyn</li>
-								<li>Maxence</li>
-							</ul>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</aside>
+                    <!--<div class="projectline">
+                    </div>-->
+                    <div class="projectcontain">
+                        <p>#Gestion Projet  X X X X, #HTML X X X, #CSS X X X <br /> #Design, #PHP, #Bonne Humeur, #Brioche</p>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="projectgroups">
+                    <div class="projectmenu">
+                        <h2>Groupes de travail</h2>
+                    </div>
+                   <!-- <div class="projectline">
+                    </div>-->
+                    <div class="projectcontain">
+                        <div id="projectworkgroups">
+                            <h3>Groupe1</h3>
+                            <div class="projectworkgroupsmembers">
+
+                            <h4>1.Modelisation</h4>
+                            <ul>
+                                <li>Jonathan</li>
+                                <li>Gaëlle</li>
+                            </ul>
+                            </div>
+                            <div class="projectworkgroupsmembers">
+                            <h4>2.Développemment</h4>
+                            <ul>
+                                <li>Jocelyn</li>
+                                <li>Maxence</li>
+                            </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </aside>
         <footer>
             <p>DL11 - Groupe 3 - 2015 - Copyrights (c)</p>
         </footer>
-	</main>
+    </main>
 
 </body>
 </html>
